chore(react): add unit test for useData()

--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -18,33 +18,40 @@
     "prepare": "npm run build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:staged": "lint-staged",
-    "lint": "eslint \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "npm run test:unit",
     "test:unit": "npx nyc mocha --no-timeouts --require ts-node/register test/**/*.test.ts",
-    "format": "prettier --write \"src/**/*.ts\" \"*.{js,json}\"",
-    "format-check": "prettier --list-different \"src/**/*.ts\" \"*.{js,json}\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
+    "format-check": "prettier --list-different \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
     "precommit": "npm run check-sensitive && lint-staged"
   },
   "devDependencies": {
     "@fluentui/react-northstar": "^0.60.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@microsoft/teams-js": "^1.9.0",
     "@microsoft/teamsfx": "^0.5.2-alpha.594b33666.0",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
+    "chai": "^4.3.6",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^12.3.4",
+    "mocha": "^9.2.1",
     "msteams-react-base-component": "^3.1.1",
     "prettier": "^2.5.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-test-renderer": "^16.9.0",
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
