--- a/packages/sdk-react/.nycrc
+++ b/packages/sdk-react/.nycrc
@@ -2,6 +2,7 @@
   "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
   "include": ["src/**/*.ts", "src/**/*.js"],
+  "exclude": ["src/useTeamsFx.ts"],
   "reporter": ["text", "html", "json-summary", "cobertura"],
   "check-coverage": true,
   "lines": 90
