--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -105,6 +105,7 @@
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
+    "ajv": "^8.5.0",
     "axios": "^0.21.1",
     "azure-arm-resource": "^3.1.1-preview",
     "chalk": "^4.1.0",
