--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -20,6 +20,29 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  npm-audit:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+      - name: audit
+        run: npx lerna-audit
+      - name: check cache
+        run: |
+          git add .
+          VAR=$(git diff --cached --name-only)
+          if [ ! -z "$VAR" ]
+          then
+            echo '======================================= Prompt Information ==============================================='
+            echo 'There found several moderate severity vulnerabilities in this repo, please check in the package or lock file to repo with: '
+            echo 'npx lerna-audit'
+            exit 1
+          fi
+
   check-format:
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
