--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -106,14 +106,14 @@
     "@azure/arm-subscriptions": "^3.0.0",
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
-    "@azure/ms-rest-nodeauth": "^3.0.6",
+    "@azure/ms-rest-nodeauth": "^3.1.1",
     "@microsoft/teamsfx-api": "^0.15.0",
     "@microsoft/teamsfx-core": "^1.4.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
     "axios": "^0.21.1",
-    "azure-arm-resource": "^3.1.1-preview",
+    "azure-arm-resource": "^7.4.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -124,7 +124,7 @@
     "ms-rest-azure": "^3.0.0",
     "node-machine-id": "^1.1.12",
     "open": "^8.2.1",
-    "tedious": "^9.2.1",
+    "tedious": "^14.3.0",
     "tree-kill": "^1.2.2",
     "underscore": "^1.12.1",
     "yargs": "^16.2.0"
