--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -98,16 +98,16 @@
     "@azure/arm-subscriptions": "^3.0.0",
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
-    "@azure/ms-rest-nodeauth": "^3.0.6",
+    "@azure/ms-rest-nodeauth": "^3.1.1",
     "@microsoft/teamsfx-api": "^0.15.0",
     "@microsoft/teamsfx-core": "^1.4.0",
     "@types/ws": "^8.2.0",
     "adm-zip": "^0.5.5",
+    "ajv": "^8.5.0",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
-    "ajv": "^8.5.0",
     "axios": "^0.21.1",
-    "azure-arm-resource": "^3.1.1-preview",
+    "azure-arm-resource": "^7.4.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -115,10 +115,10 @@
     "glob": "^7.1.6",
     "inquirer": "^8.0.0",
     "md5": "^2.3.0",
-    "ms-rest-azure": "^3.0.0",
+    "ms-rest-azure": "^3.0.1",
     "node-machine-id": "^1.1.12",
     "open": "^8.2.1",
-    "tedious": "^9.2.1",
+    "tedious": "^14.3.0",
     "tree-kill": "^1.2.2",
     "underscore": "^1.12.1",
     "vscode-jsonrpc": "^6.0.0",
