--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -15,6 +15,9 @@
         "${workspaceFolder}/../fx-core/build/**/*.js",
         "${workspaceFolder}/../api/build/**/*.js"
       ],
+      "env": {
+        "NODE_ENV": "development"
+      },
       "preLaunchTask": "npm: build"
     },
     {
