--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -957,6 +957,7 @@
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/chai-spies": "^1.0.3",
+    "@types/detect-port": "^1.3.2",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.5",
     "@types/glob": "^7.1.4",
@@ -983,6 +984,7 @@
     "copyfiles": "^2.4.1",
     "css-loader": "^5.1.3",
     "decache": "^4.6.0",
+    "detect-port": "^1.3.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
@@ -992,6 +994,7 @@
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.1",
     "istanbul": "^0.4.5",
+    "kill-port-process": "^3.0.1",
     "lint-staged": "^11.2.6",
     "mocha": "^9.1.1",
     "mocha-junit-reporter": "^2.0.2",
@@ -1021,6 +1024,7 @@
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
+    "verdaccio": "^5.6.2",
     "vsce": "^1.93.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
