--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-api",
-  "version": "0.16.0-rc.0",
+  "version": "0.16.0",
   "description": "teamsfx framework api",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -62,7 +62,7 @@
   "dependencies": {
     "@azure/core-http": "^1.2.2",
     "@azure/ms-rest-nodeauth": "^3.0.7",
-    "@microsoft/teams-manifest": "^0.0.2-rc.0",
+    "@microsoft/teams-manifest": "^0.0.2",
     "@types/fs-extra": "^9.0.10",
     "axios": "^0.21.2",
     "chai": "^4.3.4",
