--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/provision.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/provision.yml
@@ -17,12 +17,10 @@ steps:
 
 - task: Bash@3
   env:
-<%#hosting_type_contains_spfx%>
     M365_ACCOUNT_NAME: $(M365_ACCOUNT_NAME)
     M365_ACCOUNT_PASSWORD: $(M365_ACCOUNT_PASSWORD)
     M365_TENANT_ID: $(M365_TENANT_ID)
     CI_ENABLED: 'true'
-<%/hosting_type_contains_spfx%>
     TEAMSFX_ENV_NAME: <%env_name%>
   inputs:
     targetType: 'inline'
@@ -46,4 +44,4 @@ steps:
       git config user.email "azdo-agent@azure.com"
       git add .
       git commit -m "chore: commit provision configs"
-      git push
+      git push origin ${BUILD_SOURCEBRANCHNAME}
