--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/publish.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/publish.yml
@@ -26,6 +26,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
+      set -vuxo pipefail
+      
       # Install the local dev dependency of @microsoft/teamsfx-cli. 
       # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
       # If you prefer to use 'npm ci', please make sure to commit package-lock.json first, or just change it to 'npm install'.
