--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@fluentui/react-northstar": "^0.60.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^1.9.0",
     "@microsoft/teamsfx": "^0.6.0",
     "@shared/eslint-config": "file:../eslint-config",
@@ -60,6 +61,7 @@
   },
   "peerDependencies": {
     "@fluentui/react-northstar": "^0.60.1",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teamsfx": "^0.6.0",
     "msteams-react-base-component": "^3.1.1",
     "react": "^16.8.6"
