--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -192,7 +192,7 @@ jobs:
         run: |
           file=`find . -wholename "${{ matrix.cases }}"`
           if [ ! -z "$file" ]; then
-            npx mocha --reporter mochawesome $file --parallel
+            npx mocha --reporter mochawesome --timeout 900000 $file --parallel
           fi
 
       - name: get report name
@@ -278,19 +278,29 @@ jobs:
               author="<a href=\\\"mailto:$email\\\"><span>$email</span></a>"
             fi
 
+            lable=""
             if [ "$status" == "success" ]; then
               passed=$((passed+1))
               label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
-              lists="$lists <tr> <td style=\\\"text-align: left;\\\">$elegant_path</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration</td> </tr>"
             else
               failed=$((failed+1))
               label="<span style=\\\"background-color: #dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
-              lists="<tr> <td style=\\\"text-align: left;\\\">$elegant_path</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration</td> </tr> $lists"
+            fi
+
+            url=`echo $result | jq --arg case $case -r '.jobs[] | select(.name == $case ) | .html_url'`
+            url="<a href=\\\"$url\\\">For Detail</a>"
+
+            row="<tr> <td style=\\\"text-align: left;\\\">$elegant_path</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration</td> <td>$url</td> </tr>"
+
+            if [ "$status" == "success" ]; then
+              lists="$lists $row"
+            else
+              lists="$row $lists"
             fi
 
           done <<< $cases
 
-          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> </tr> $lists </table> <br /> The detail can be found here: https://github.com/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }}"
+          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> <th>URL</th> </tr> $lists </table> <br /> The detail can be found here: https://github.com/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }}"
 
           total=$((passed+failed))
 
