--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -853,9 +853,14 @@
         "title": "Experimental Features",
         "order": 3,
         "properties": {
-          "fx-extension.enableIncrementalAppBuilding": {
+          "fx-extension.unifyConfigs": {
             "type": "boolean",
-            "description": "Enable incremental app building and unify the local & remote configs. (requires reload of VS Code)",
+            "description": "Unify the local & remote configs. (requires reload of VS Code)",
+            "default": false
+          },
+          "fx-extension.enableInitApp": {
+            "type": "boolean",
+            "description": "Support to initialize a TeamsFx application. (requires reload of VS Code)",
             "default": false
           }
         }
