chore: refine wording & localization

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -534,7 +534,7 @@
       },
       {
         "command": "fx-extension.addCICDWorkflows",
-        "title": "Teams: Add CI/CD Workflows",
+        "title": "%teamstoolkit.commands.addCICDWorkflows.title%",
         "icon": "$(sync)"
       },
       {
