--- a/templates/tab/js/default/package.json
+++ b/templates/tab/js/default/package.json
@@ -4,12 +4,12 @@
     "private": true,
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
-        "@microsoft/mgt-element": "2.3.2-next.teamsfx.f5fc7d2",
-        "@microsoft/mgt-react": "2.3.2-next.teamsfx.f5fc7d2",
-        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.f5fc7d2",
+        "@microsoft/mgt-element": "2.4.1-next.teamsfx.3511fba",
+        "@microsoft/mgt-react": "2.4.1-next.teamsfx.3511fba",
+        "@microsoft/mgt-teamsfx-provider": "2.4.1-next.teamsfx.3511fba",
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^1.9.0",
-        "@microsoft/teamsfx": "^0.5.2-alpha.594b33666.0",
+        "@microsoft/teamsfx": "^0.6.0",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^3.1.0",
         "react": "^16.14.0",
