chore: set eslint to lerna

--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,7 @@
         "packages/failpoint-ts",
         "packages/adaptivecards-tools-sdk",
         "packages/manifest",
+        "packages/eslint-config",
         "templates"
     ],
     "command": {
