--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "setup": "npm install && npm run build",
     "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
     "bootstrap": "lerna bootstrap",
-    "install-eslint": "cd packages/eslint-config && npm install",
     "lint:staged": "lerna run lint:staged --stream",
     "lint": "lerna run lint --stream",
     "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog",
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "postinstall": "npm run bootstrap --hoist && npm run install-eslint",
+    "postinstall": "npm run bootstrap --hoist",
     "build": "lerna run build",
     "clean": "lerna clean"
   },
