--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-no-secrets": "^0.8.9"
   }
 }
