--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -56,6 +56,7 @@
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
     "@types/mochawesome": "^6.2.1",
+    "@types/mustache": "^4.1.2",
     "@types/node": "^14.14.21",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
