--- a/packages/fx-core/.gitignore
+++ b/packages/fx-core/.gitignore
@@ -6,8 +6,5 @@ coverage
 .env
 .prettierrc.json
 .fx
-templates/plugins/resource/bot/**/*.zip
-templates/plugins/resource/frontend/**/*.zip
-templates/plugins/resource/function/**/*.zip
-templates/plugins/resource/dotnet/**/*.zip
+templates/**/*.zip
 tests/**/TeamsSPFxApp.zip
