chore(release): publish detail
 - @microsoft/adaptivecards-tools@0.1.5-rc.0
 - @microsoft/teamsfx-api@0.17.0-rc.0
 - @microsoft/teamsfx-cli@0.12.0-rc.0
 - @shared/eslint-config@0.2.0-rc.0
 - @microsoft/failpoint-ts@0.0.7-rc.0
 - @microsoft/teamsfx-core@1.6.0-rc.0
 - @microsoft/teams-manifest@0.0.3-rc.0
 - @microsoft/teamsfx@0.6.1-rc.0
 - @microsoft/teamsfx-react@0.1.0-rc.0
 - @microsoft/teamsfx-server@0.0.4-rc.0
 - ms-teams-vscode-extension@3.6.0-rc.0
 - templates@0.5.0-rc.0

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shared/eslint-config",
-  "version": "0.1.0",
+  "version": "0.2.0-rc.0",
   "description": "Shared ESLint configuration",
   "private": true,
   "devDependencies": {
