--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-react",
-  "version": "0.0.1",
+  "version": "0.1.0-rc.0",
   "description": "React helper functions for Microsoft TeamsFx",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -30,7 +30,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^1.9.0",
-    "@microsoft/teamsfx": "^0.6.0",
+    "@microsoft/teamsfx": "^0.6.1-rc.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
@@ -63,7 +63,6 @@
     "msteams-react-base-component": "^3.1.1",
     "react": "^16.8.6"
   },
-  "dependencies": {},
   "publishConfig": {
     "access": "public"
   },
