fix(vsc): env view shows if no project opened

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -103,7 +103,8 @@
         },
         {
           "id": "teamsfx-environment",
-          "name": "Environment"
+          "name": "Environment",
+          "when": "fx-extension.sidebarWelcome.treeview"
         },
         {
           "id": "teamsfx-development",
