--- a/templates/package.json
+++ b/templates/package.json
@@ -14,6 +14,9 @@
         "bot/js/default",
         "bot/ts/default",
         "bot/ts/notification",
+        "bot/ts/notification-function-base",
+        "bot/ts/notification-trigger-http",
+        "bot/ts/notification-trigger-timer",
         "function-base/js/default",
         "function-base/ts/default",
         "function-triggers/js/HTTPTrigger",
