feat(m365): add create m365 app command (#4273)
* feat(m365): add create m365 app command

- add a new command to create a m365 app, this command will be only
  enabled if m365 feature flag is set
- add create new m365 project handler, set isM365 in inputs to let
  FxCore know this is to create a m365 project
- add TeamsAppInstallation.ReadForUser to graph scopes

* chore: add is-m365 property to creating project event

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -46,6 +46,7 @@
     "onCommand:fx-extension.openDocument",
     "onCommand:fx-extension.cmpAccounts",
     "onCommand:fx-extension.create",
+    "onCommand:fx-extension.create-M365",
     "onCommand:fx-extension.addCapability",
     "onCommand:fx-extension.update",
     "onCommand:fx-extension.openManifest",
@@ -436,6 +437,11 @@
       {
         "command": "fx-extension.create",
         "title": "%teamstoolkit.commands.createProject.title%"
+      },
+      {
+        "command": "fx-extension.create-M365",
+        "title": "%teamstoolkit.commands.createM365Project.title%",
+        "enablement": "fx-extension.isM365AppEnabled"
       },
       {
         "command": "fx-extension.init",
