--- a/templates/package.json
+++ b/templates/package.json
@@ -25,7 +25,9 @@
         "tab/js/default",
         "tab/ts/default",
         "tab/js/non-sso",
-        "tab/ts/non-sso"
+        "tab/ts/non-sso",
+        "tab/js/m365",
+        "tab/ts/m365"
     ],
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.19.0",
