--- a/templates/tab/js/m365/package.json
+++ b/templates/tab/js/m365/package.json
@@ -10,6 +10,7 @@
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "2.0.0-beta.2",
         "@microsoft/teamsfx": "0.6.0-beta.0",
+        "@microsoft/teamsfx-react": "0.0.2-alpha.a4c0338b1.0",
         "axios": "^0.21.1",
         "msteams-react-base-component": "4.0.0-preview5",
         "react": "^16.14.0",
