chore: refine templates, align npm ci

--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/cd.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/cd.yml
@@ -26,6 +26,7 @@ steps:
     TEAMSFX_ENV_NAME: <%env_name%>
   inputs:
     targetType: 'inline'
+    failOnStderr: true
     script: |
       set -vuxo pipefail
       
