--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/ci.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/ci.yml
@@ -20,7 +20,7 @@ steps:
     targetType: 'inline'
     failOnStderr: true
     script: |
-      set -euxo pipefail
+      set -vuxo pipefail
 
       # This is just an example workflow for continuous integration.
       # You should customize it to meet your own requirements.
