--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -56,6 +56,7 @@
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
     "@types/mochawesome": "^6.2.1",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^14.14.21",
     "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
@@ -80,6 +81,7 @@
     "mocha": "^9.1.1",
     "mocha-junit-reporter": "^2.0.2",
     "mochawesome": "^7.0.1",
+    "mock-fs": "^5.1.2",
     "mocked-env": "^1.3.5",
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
