--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/provision.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/provision.yml
@@ -27,9 +27,8 @@ steps:
     TEAMSFX_ENV_NAME: <%env_name%>
   inputs:
     targetType: 'inline'
-    failOnStderr: true
     script: |
-      set -vuxo pipefail
+      set -evuxo pipefail
       
       # Install the local dev dependency of @microsoft/teamsfx-cli. 
       # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
