--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -979,6 +979,7 @@
     "@types/tmp": "^0.2.0",
     "@types/underscore": "^1.11.0",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.1",
     "@types/vscode": "^1.58.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -1051,11 +1052,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jscodeshift": "^0.13.0",
+    "jsonc-parser": "^3.0.0",
     "jsonschema": "^1.4.0",
     "log4js": "^6.3.0",
     "read-package-json-fast": "^2.0.3",
     "sudo-prompt": "^9.2.1",
     "underscore": "^1.12.1",
+    "validator": "^13.7.0",
     "vscode-extension-telemetry": "^0.2.9",
     "vscode-tas-client": "^0.1.22",
     "vscode-test": "^1.5.2"
