--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-core",
-  "version": "1.6.0",
+  "version": "1.6.1-rc-hotfix.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -63,7 +63,7 @@
     "@azure/storage-blob": "^12.7.0",
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
-    "@microsoft/teamsfx-api": "^0.17.0",
+    "@microsoft/teamsfx-api": "^0.17.1-rc-hotfix.0",
     "@npmcli/arborist": "^4.2.0",
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
