--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -63,6 +63,7 @@
     "onCommand:fx-extension.openReadMe",
     "onCommand:fx-extension.openDeploymentTreeview",
     "onCommand:workbench.action.tasks.runTask",
+    "onCommand:fx-extension.addSso",
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
     "onView:teamsfx-accounts",
@@ -654,6 +655,11 @@
         "command": "fx-extension.openDeploymentTreeview",
         "title": "Teams: Open Deployment Treeview",
         "enablement": "never"
+      },
+      {
+        "command": "fx-extension.addSso",
+        "title": "%teamstoolkit.commands.addSso.title%",
+        "enablement": "fx-extension.isAadManifestEnabled"
       }
     ],
     "taskDefinitions": [
